# monocular-camera-genom3

./: Makefile.am  MonocularCamera-genom3-uninstalled.pc.in  MonocularCamera-genom3.pc.in  README.adoc  camera.gen  configure.ac
codels/: Makefile.am  MonocularCamera_codels.c  MonocularCamera_codels.cc  MonocularCamera_publish_codels.c  MonocularCamera_publish_codels.cc
examples/: python.py  tcl-script.tcl
